--- a/styles/header.css
+++ b/styles/header.css
@@ -24,7 +24,7 @@ header .container {
     max-width: 384px;
 }
 
-#profice h1 {
+#profile h1 {
     font: var(--text-lg);
     color: var(--text-color-primary);
     margin-bottom: 8px;
